# bend

./: .gitignore  .markdownlint.yaml  LICENSE  Makefile  PHASE2_GOTCHAS.md  README.md  TEST_SUMMARY.md  TODO.md  example.csv  example_with_metadata.csv  package.json  pyproject.toml  requirements.txt  scalpel.py
.github/workflows/: lint.yml  test.yml  wiki.yml
bend/: __init__.py  cli.py  core.py
docs/: HOME.md  README.md  SUMMARY.md  _Sidebar.md
docs/aggregations/: README.md  aggregations.md  groupby.md
docs/column-operations/: README.md  drop.md  hide.md  rename.md  select.md  unhide.md
docs/concepts/: README.md  understanding-determinism-reloadability.md
docs/data-manipulation/: README.md  assign.md  filter.md  map.md
docs/data-quality/: README.md  dropna.md  fillna.md  replace.md
docs/lifecycle/: README.md  memory_usage.md  rebase.md  refresh.md  reload.md  replay.md
docs/multi-q-operations/: README.md  concat.md  difference.md  intersect.md  join.md  merge.md  union.md
docs/output/: README.md  dump.md  show.md  to_df.md
docs/properties/: properties.md
docs/row-operations/: README.md  distinct.md  head.md  sample.md  sort.md  tail.md
tests/: __init__.py  test_cli.py  test_core.py  test_deterministic_reloadable.py  test_readme_examples.py
